stack/overlays/vllm-standalone-llama3.2/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
spec:
  template:
    spec:
      containers:
      - name: vllm
        args:
        - "--model"
        - meta-llama/Llama-3.2-3B-Instruct
        - "--enable-auto-tool-choice"
        - "--chat-template"
        - "/vllm-workspace/examples/tool_chat_template_llama3.2_json.jinja"
        - "--tool-call-parser"
        - llama3_json
        - "--port"
        - '8000'
        - "--dtype"
        - half
        - "--max-model-len"
        - '8192'
