stack/overlays/vllm-standalone-llama3.2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vllm
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: vllm
  sessionAffinity: None
  type: ClusterIP
