stack/overlays/vllm-standalone-llama3.2/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vllm
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: vllm
    weight: 100
  wildcardPolicy: None
